[package]
name = "random-access"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
memmap2 = "0.9"
num = "0.4"
rand = "0.9"
rand_distr = "0.5"
rand_pcg = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
